--- a/analysis/Movies Data Analysis.ipynb
+++ b/analysis/Movies Data Analysis.ipynb
@@ -50,7 +50,7 @@
     }
    ],
    "source": [
-    "movies_df = pd.read_csv('input/all_movies.csv')\n",
+    "movies_df: pd.DataFrame = pd.read_csv('input/all_movies.csv')\n",
     "movies_df"
    ],
    "metadata": {
@@ -194,7 +194,9 @@
     }
    ],
    "source": [
-    "assert (len(movies_df) - len(movies_df.drop_duplicates(['title', 'genres']))) == 0"
+    "movies_without_duplicates_df: pd.DataFrame = movies_df.drop_duplicates(['title', 'genres'])\n",
+    "\n",
+    "assert len(movies_df) ==  len(movies_without_duplicates_df)"
    ],
    "metadata": {
     "collapsed": false,
@@ -214,6 +216,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0        False\n1        False\n2        False\n3        False\n4        False\n         ...  \n58093    False\n58094    False\n58095    False\n58096    False\n58097    False\nLength: 58098, dtype: bool"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies_df.duplicated(['title', 'genres'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### NOTES: can make a function that takes in a data frame and returns a number of duplicated records based on duplication criteria"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "outputs": [
     {
@@ -226,7 +260,9 @@
     }
    ],
    "source": [
-    "movies_df.loc[movies_df.duplicated(['title', 'genres'])].shape"
+    "record_is_duplicated_df = movies_df.duplicated(['title', 'genres'])\n",
+    "duplicated_movies_df = movies_df.loc[record_is_duplicated_df]\n",
+    "duplicated_movies_df.shape"
    ],
    "metadata": {
     "collapsed": false,
@@ -316,12 +352,16 @@
     "\n",
     "initial_4: str = \" comedy \"\n",
     "expected_4: str = \"comedy\"\n",
+    "\n",
     "actual = lower_case_and_strip_spaces(initial)\n",
     "assert actual == expected\n",
+    "\n",
     "actual = lower_case_and_strip_spaces(initial_2)\n",
     "assert actual == expected_2\n",
+    "\n",
     "actual = lower_case_and_strip_spaces(initial_3)\n",
     "assert actual == expected_3\n",
+    "\n",
     "actual = lower_case_and_strip_spaces(initial_4)\n",
     "assert actual == expected_4"
    ],
@@ -1377,8 +1417,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "outputs": [],
+   "execution_count": 10,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'genres_list' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[0;32m/var/folders/p5/b_txxkwd5bl901mk43z_hmkw0000gn/T/ipykernel_40540/1727403029.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[0;32mfrom\u001B[0m \u001B[0msklearn\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mfeature_extraction\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mtext\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mTfidfVectorizer\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 2\u001B[0;31m \u001B[0mtf\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mTfidfVectorizer\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0manalyzer\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;34m'word'\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0mngram_range\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m1\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;36m1\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0mmin_df\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;36m0\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mstop_words\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;34m'english'\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mvocabulary\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mgenres_list\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      3\u001B[0m \u001B[0mtfidf_matrix\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mtf\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mfit_transform\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mmovies_with_many_ratings\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;34m'genres_as_string'\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'genres_list' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "tf = TfidfVectorizer(analyzer='word',ngram_range=(1, 1),min_df=0, stop_words='english', vocabulary=genres_list)\n",
@@ -1393,18 +1445,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "        0    1         2         3         4         5    6         7    8   \\\n0      0.0  0.0  0.000000  0.000000  0.000000  0.000000  0.0  0.000000  0.0   \n1      0.0  0.0  0.000000  0.000000  0.773345  0.000000  0.0  0.633986  0.0   \n2      0.0  0.0  0.000000  0.000000  0.000000  0.000000  0.0  0.292683  0.0   \n3      0.0  0.0  0.000000  0.000000  1.000000  0.000000  0.0  0.000000  0.0   \n4      0.0  0.0  0.000000  0.000000  0.500969  0.761814  0.0  0.410693  0.0   \n...    ...  ...       ...       ...       ...       ...  ...       ...  ...   \n28317  0.0  0.0  1.000000  0.000000  0.000000  0.000000  0.0  0.000000  0.0   \n28318  0.0  0.0  0.000000  0.000000  0.000000  0.000000  0.0  0.384096  0.0   \n28319  0.0  0.0  0.000000  0.875695  0.482865  0.000000  0.0  0.000000  0.0   \n28320  0.0  0.0  0.704134  0.710067  0.000000  0.000000  0.0  0.000000  0.0   \n28321  0.0  0.0  0.000000  0.000000  0.000000  0.000000  0.0  0.000000  0.0   \n\n        9         10   11   12        13   14   15        16   17   18  \n0      0.0  0.000000  0.0  1.0  0.000000  0.0  0.0  0.000000  0.0  0.0  \n1      0.0  0.000000  0.0  0.0  0.000000  0.0  0.0  0.000000  0.0  0.0  \n2      0.0  0.530887  0.0  0.0  0.647573  0.0  0.0  0.461677  0.0  0.0  \n3      0.0  0.000000  0.0  0.0  0.000000  0.0  0.0  0.000000  0.0  0.0  \n4      0.0  0.000000  0.0  0.0  0.000000  0.0  0.0  0.000000  0.0  0.0  \n...    ...       ...  ...  ...       ...  ...  ...       ...  ...  ...  \n28317  0.0  0.000000  0.0  0.0  0.000000  0.0  0.0  0.000000  0.0  0.0  \n28318  0.0  0.696698  0.0  0.0  0.000000  0.0  0.0  0.605873  0.0  0.0  \n28319  0.0  0.000000  0.0  0.0  0.000000  0.0  0.0  0.000000  0.0  0.0  \n28320  0.0  0.000000  0.0  0.0  0.000000  0.0  0.0  0.000000  0.0  0.0  \n28321  0.0  1.000000  0.0  0.0  0.000000  0.0  0.0  0.000000  0.0  0.0  \n\n[28322 rows x 19 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n      <th>3</th>\n      <th>4</th>\n      <th>5</th>\n      <th>6</th>\n      <th>7</th>\n      <th>8</th>\n      <th>9</th>\n      <th>10</th>\n      <th>11</th>\n      <th>12</th>\n      <th>13</th>\n      <th>14</th>\n      <th>15</th>\n      <th>16</th>\n      <th>17</th>\n      <th>18</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.773345</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.633986</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.292683</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.530887</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.647573</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.461677</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>1.000000</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.500969</td>\n      <td>0.761814</td>\n      <td>0.0</td>\n      <td>0.410693</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>28317</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>28318</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.384096</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.696698</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.605873</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>28319</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.875695</td>\n      <td>0.482865</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>28320</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.704134</td>\n      <td>0.710067</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>28321</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>28322 rows × 19 columns</p>\n</div>"
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "pd.DataFrame(tfidf_matrix.toarray())"
    ],
@@ -1417,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "from sklearn.metrics.pairwise import linear_kernel\n",
@@ -1437,6 +1479,32 @@
    ],
    "metadata": {
     "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'cosine_sim' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[0;32m/var/folders/p5/b_txxkwd5bl901mk43z_hmkw0000gn/T/ipykernel_40540/162028115.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0mcosine_sim\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m: name 'cosine_sim' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "cosine_sim"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
