complete analysis updated

--- a/analysis_complete/analysis/Movie Data Analysis - Scratch Notes.ipynb
+++ b/analysis_complete/analysis/Movie Data Analysis - Scratch Notes.ipynb
@@ -18,7 +18,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "id": "GENKa5u8rzr4",
     "executionInfo": {
@@ -62,16 +62,18 @@
     },
     "outputId": "a26caf01-34c3-4462-a4bc-0b71f4863cf9"
    },
-   "execution_count": 12,
+   "execution_count": 1,
    "outputs": [
     {
-     "data": {
-      "text/plain": "      movieId                                    title  \\\n0           1                         Toy Story (1995)   \n1           2                           Jumanji (1995)   \n2           3                  Grumpier Old Men (1995)   \n3           4                 Waiting to Exhale (1995)   \n4           5       Father of the Bride Part II (1995)   \n...       ...                                      ...   \n58093  193876                  The Great Glinka (1946)   \n58094  193878  Les tribulations d'une caissière (2011)   \n58095  193880                 Her Name Was Mumu (2016)   \n58096  193882                             Flora (2017)   \n58097  193886                              Leal (2018)   \n\n                                            genres  \n0      Adventure|Animation|Children|Comedy|Fantasy  \n1                       Adventure|Children|Fantasy  \n2                                   Comedy|Romance  \n3                             Comedy|Drama|Romance  \n4                                           Comedy  \n...                                            ...  \n58093                           (no genres listed)  \n58094                                       Comedy  \n58095                                        Drama  \n58096                Adventure|Drama|Horror|Sci-Fi  \n58097                           Action|Crime|Drama  \n\n[58098 rows x 3 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>movieId</th>\n      <th>title</th>\n      <th>genres</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>Toy Story (1995)</td>\n      <td>Adventure|Animation|Children|Comedy|Fantasy</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>Jumanji (1995)</td>\n      <td>Adventure|Children|Fantasy</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>Grumpier Old Men (1995)</td>\n      <td>Comedy|Romance</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>Waiting to Exhale (1995)</td>\n      <td>Comedy|Drama|Romance</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>Father of the Bride Part II (1995)</td>\n      <td>Comedy</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>58093</th>\n      <td>193876</td>\n      <td>The Great Glinka (1946)</td>\n      <td>(no genres listed)</td>\n    </tr>\n    <tr>\n      <th>58094</th>\n      <td>193878</td>\n      <td>Les tribulations d'une caissière (2011)</td>\n      <td>Comedy</td>\n    </tr>\n    <tr>\n      <th>58095</th>\n      <td>193880</td>\n      <td>Her Name Was Mumu (2016)</td>\n      <td>Drama</td>\n    </tr>\n    <tr>\n      <th>58096</th>\n      <td>193882</td>\n      <td>Flora (2017)</td>\n      <td>Adventure|Drama|Horror|Sci-Fi</td>\n    </tr>\n    <tr>\n      <th>58097</th>\n      <td>193886</td>\n      <td>Leal (2018)</td>\n      <td>Action|Crime|Drama</td>\n    </tr>\n  </tbody>\n</table>\n<p>58098 rows × 3 columns</p>\n</div>"
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[0;32m/var/folders/p5/b_txxkwd5bl901mk43z_hmkw0000gn/T/ipykernel_1089/3104269876.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0mmovies_df\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mpd\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mread_csv\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'input/movies.csv'\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mdtype\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mstr\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      2\u001B[0m \u001B[0mmovies_df\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'pd' is not defined"
+     ]
     }
    ]
   },
@@ -93,7 +95,7 @@
      }
     }
    },
-   "execution_count": 13,
+   "execution_count": null,
    "outputs": []
   },
   {
@@ -119,18 +121,8 @@
     },
     "outputId": "aef2f63e-58d1-4b1d-e56e-b9bd3613b8af"
    },
-   "execution_count": 14,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "          userId movieId rating   timestamp\n0              1     307    3.5  1256677221\n1              1     481    3.5  1256677456\n2              1    1091    1.5  1256677471\n3              1    1257    4.5  1256677460\n4              1    1449    4.5  1256677264\n...          ...     ...    ...         ...\n27753439  283228    8542    4.5  1379882795\n27753440  283228    8712    4.5  1379882751\n27753441  283228   34405    4.5  1379882889\n27753442  283228   44761    4.5  1354159524\n27753443  283228   54286    4.5  1354159718\n\n[27753444 rows x 4 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>userId</th>\n      <th>movieId</th>\n      <th>rating</th>\n      <th>timestamp</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>307</td>\n      <td>3.5</td>\n      <td>1256677221</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>481</td>\n      <td>3.5</td>\n      <td>1256677456</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>1091</td>\n      <td>1.5</td>\n      <td>1256677471</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>1257</td>\n      <td>4.5</td>\n      <td>1256677460</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>1449</td>\n      <td>4.5</td>\n      <td>1256677264</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>27753439</th>\n      <td>283228</td>\n      <td>8542</td>\n      <td>4.5</td>\n      <td>1379882795</td>\n    </tr>\n    <tr>\n      <th>27753440</th>\n      <td>283228</td>\n      <td>8712</td>\n      <td>4.5</td>\n      <td>1379882751</td>\n    </tr>\n    <tr>\n      <th>27753441</th>\n      <td>283228</td>\n      <td>34405</td>\n      <td>4.5</td>\n      <td>1379882889</td>\n    </tr>\n    <tr>\n      <th>27753442</th>\n      <td>283228</td>\n      <td>44761</td>\n      <td>4.5</td>\n      <td>1354159524</td>\n    </tr>\n    <tr>\n      <th>27753443</th>\n      <td>283228</td>\n      <td>54286</td>\n      <td>4.5</td>\n      <td>1354159718</td>\n    </tr>\n  </tbody>\n</table>\n<p>27753444 rows × 4 columns</p>\n</div>"
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ]
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
@@ -154,40 +146,13 @@
     },
     "outputId": "de5cac9d-a94c-4e37-ff5e-460890dcf7ec"
    },
-   "execution_count": 8,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 27753444 entries, 0 to 27753443\n",
-      "Data columns (total 4 columns):\n",
-      " #   Column     Dtype  \n",
-      "---  ------     -----  \n",
-      " 0   userId     int64  \n",
-      " 1   movieId    int64  \n",
-      " 2   rating     float64\n",
-      " 3   timestamp  int64  \n",
-      "dtypes: float64(1), int64(3)\n",
-      "memory usage: 847.0 MB\n"
-     ]
-    }
-   ]
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "userId  movieId  rating  timestamp \n1       1091     1.5     1256677471    1\n269337  135436   4.0     1480795257    1\n        164949   4.0     1508056537    1\n        1645     4.5     1433065714    1\n        1644     2.0     1508057146    1\n                                      ..\n184347  500      3.5     1487643787    1\n        49824    2.5     1487643774    1\n        4979     3.5     1487649199    1\n        4973     4.5     1487643150    1\n99999   832      4.0     847888445     1\nLength: 27753444, dtype: int64"
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 1,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
@@ -200,9 +165,7 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [
-    "ratings_df."
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
