newest clean state

--- a/analysis/Movies Data Analysis.ipynb
+++ b/analysis/Movies Data Analysis.ipynb
@@ -114,6 +114,51 @@
   {
    "cell_type": "markdown",
    "source": [
+    "#### Let's do some cleanup."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "### Checking for Duplicates"
    ],
    "metadata": {
@@ -295,51 +340,6 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Let's do some cleanup."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
     "## Step 2: Feature Preparation"
    ],
    "metadata": {
@@ -449,49 +449,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Column with list of genres"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
     "Group by Genre"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Aggregrate the results"
    ],
    "metadata": {
     "collapsed": false
@@ -573,41 +531,12 @@
    }
   },
   {
-   "cell_type": "raw",
-   "source": [
-    "analyzer : {'word', 'char', 'char_wb'} or callable, default='word'\n",
-    "        Whether the feature should be made of word or character n-grams.\n",
-    "        Option 'char_wb' creates character n-grams only from text inside\n",
-    "        word boundaries; n-grams at the edges of words are padded with space.\n",
-    "\n",
-    "ngram_range : tuple (min_n, max_n), default=(1, 1)\n",
-    "        The lower and upper boundary of the range of n-values for different\n",
-    "        n-grams to be extracted. All values of n such that min_n <= n <= max_n\n",
-    "        will be used. For example an ``ngram_range`` of ``(1, 1)`` means only\n",
-    "        unigrams, ``(1, 2)`` means unigrams and bigrams, and ``(2, 2)`` means\n",
-    "        only bigrams.\n",
-    "\n",
-    "min_df : float or int, default=1\n",
-    "        When building the vocabulary ignore terms that have a document\n",
-    "        frequency strictly lower than the given threshold.\n",
-    "\n",
-    "vocabulary_ : dict\n",
-    "        A mapping of terms to feature indices."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% raw\n"
-    }
-   }
-  },
-  {
    "cell_type": "code",
    "execution_count": 40,
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "tf = TfidfVectorizer(analyzer='word',ngram_range=(1, 1),min_df=0, stop_words='english', vocabulary=all_genres_list)\n",
+    "tf = TfidfVectorizer(vocabulary=all_genres)\n",
     "tfidf_matrix = tf.fit_transform(movies_ready_for_vectorizer['genres'])"
    ],
    "metadata": {
@@ -742,7 +671,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The next part you can Test Drive because now we'll add logic to grab the top 20 movie titles by index\n",
+    "The next part you can Test Drive because now we'll add logic to grab the top 30 movie titles by index\n",
     "\n",
     "We can build this in a separate module and import it here to see some results"
    ],
