comment out tests on initial version

--- a/analysis_complete/analysis/Movies Data Analysis.ipynb
+++ b/analysis_complete/analysis/Movies Data Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -23,8 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "       movieId                                              title  \\\n41298   156235                                  The Escape (1964)   \n29361   127587                             The Seven Males (1951)   \n41033   155589                             Noin 7 veljestä (1968)   \n40929   155314                 Between Eleven and Midnight (1949)   \n6511      6620                           American Splendor (2003)   \n3470      3560  Empire of Passion (a.k.a. In the Realm of Pass...   \n22583   107213                    Truth About Emanuel, The (2013)   \n26672   120857                                Bloodsuckers (2005)   \n29330   127341                                    Longshot (2001)   \n52391   180687                   I'll See You in My Dreams (1951)   \n24088   112404                                 Jack Strong (2014)   \n27531   122849                              Naked Violence (1969)   \n51377   178501                             House of Others (2016)   \n37349   146706                                      Lejdis (2008)   \n29093   126759                           The Nude Princess (1976)   \n41559   156842                                   Man Alive (1945)   \n23635   110641                                        G@me (2003)   \n6640      6749                  Prince and the Pauper, The (1937)   \n32148   134532                                  Wonderwall (1968)   \n35896   143327                              Gambling House (1950)   \n\n                                             genres  \n41298                                        Drama   \n29361                               Comedy|western   \n41033                           (no genres listed)   \n40929                           (no genres listed)   \n6511                                  Comedy|drama   \n3470                           Crime|drama|ROMANCE   \n22583                               Drama|thriller   \n26672                         Action|horror|SCI-FI   \n29330   Action|comedy|CRIME|drama|Romance|THRILLER   \n52391                                 Comedy|drama   \n24088                        Action|crime|THRILLER   \n27531                                  Crime|drama   \n51377                                        Drama   \n37349                           (no genres listed)   \n29093                           (no genres listed)   \n41559                                       Comedy   \n23635                                     Thriller   \n6640                               Adventure|drama   \n32148                                Drama|romance   \n35896                                        Crime   ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>movieId</th>\n      <th>title</th>\n      <th>genres</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>41298</th>\n      <td>156235</td>\n      <td>The Escape (1964)</td>\n      <td>Drama</td>\n    </tr>\n    <tr>\n      <th>29361</th>\n      <td>127587</td>\n      <td>The Seven Males (1951)</td>\n      <td>Comedy|western</td>\n    </tr>\n    <tr>\n      <th>41033</th>\n      <td>155589</td>\n      <td>Noin 7 veljestä (1968)</td>\n      <td>(no genres listed)</td>\n    </tr>\n    <tr>\n      <th>40929</th>\n      <td>155314</td>\n      <td>Between Eleven and Midnight (1949)</td>\n      <td>(no genres listed)</td>\n    </tr>\n    <tr>\n      <th>6511</th>\n      <td>6620</td>\n      <td>American Splendor (2003)</td>\n      <td>Comedy|drama</td>\n    </tr>\n    <tr>\n      <th>3470</th>\n      <td>3560</td>\n      <td>Empire of Passion (a.k.a. In the Realm of Pass...</td>\n      <td>Crime|drama|ROMANCE</td>\n    </tr>\n    <tr>\n      <th>22583</th>\n      <td>107213</td>\n      <td>Truth About Emanuel, The (2013)</td>\n      <td>Drama|thriller</td>\n    </tr>\n    <tr>\n      <th>26672</th>\n      <td>120857</td>\n      <td>Bloodsuckers (2005)</td>\n      <td>Action|horror|SCI-FI</td>\n    </tr>\n    <tr>\n      <th>29330</th>\n      <td>127341</td>\n      <td>Longshot (2001)</td>\n      <td>Action|comedy|CRIME|drama|Romance|THRILLER</td>\n    </tr>\n    <tr>\n      <th>52391</th>\n      <td>180687</td>\n      <td>I'll See You in My Dreams (1951)</td>\n      <td>Comedy|drama</td>\n    </tr>\n    <tr>\n      <th>24088</th>\n      <td>112404</td>\n      <td>Jack Strong (2014)</td>\n      <td>Action|crime|THRILLER</td>\n    </tr>\n    <tr>\n      <th>27531</th>\n      <td>122849</td>\n      <td>Naked Violence (1969)</td>\n      <td>Crime|drama</td>\n    </tr>\n    <tr>\n      <th>51377</th>\n      <td>178501</td>\n      <td>House of Others (2016)</td>\n      <td>Drama</td>\n    </tr>\n    <tr>\n      <th>37349</th>\n      <td>146706</td>\n      <td>Lejdis (2008)</td>\n      <td>(no genres listed)</td>\n    </tr>\n    <tr>\n      <th>29093</th>\n      <td>126759</td>\n      <td>The Nude Princess (1976)</td>\n      <td>(no genres listed)</td>\n    </tr>\n    <tr>\n      <th>41559</th>\n      <td>156842</td>\n      <td>Man Alive (1945)</td>\n      <td>Comedy</td>\n    </tr>\n    <tr>\n      <th>23635</th>\n      <td>110641</td>\n      <td>G@me (2003)</td>\n      <td>Thriller</td>\n    </tr>\n    <tr>\n      <th>6640</th>\n      <td>6749</td>\n      <td>Prince and the Pauper, The (1937)</td>\n      <td>Adventure|drama</td>\n    </tr>\n    <tr>\n      <th>32148</th>\n      <td>134532</td>\n      <td>Wonderwall (1968)</td>\n      <td>Drama|romance</td>\n    </tr>\n    <tr>\n      <th>35896</th>\n      <td>143327</td>\n      <td>Gambling House (1950)</td>\n      <td>Crime</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "movies_df: pd.DataFrame = pd.read_csv('input/all_movies.csv')\n",
     "movies_df.sample(20)"
@@ -38,8 +48,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "       movieId                                    title  \\\n0            1                         Toy Story (1995)   \n1            2                           Jumanji (1995)   \n2            3                  Grumpier Old Men (1995)   \n3            4                 Waiting to Exhale (1995)   \n4            5       Father of the Bride Part II (1995)   \n...        ...                                      ...   \n58093   193876                  The Great Glinka (1946)   \n58094   193878  Les tribulations d'une caissière (2011)   \n58095   193880                 Her Name Was Mumu (2016)   \n58096   193882                             Flora (2017)   \n58097   193886                              Leal (2018)   \n\n                                              genres  \n0       Adventure|animation|CHILDREN|comedy|Fantasy   \n1                        Adventure|children|FANTASY   \n2                                    Comedy|romance   \n3                              Comedy|drama|ROMANCE   \n4                                            Comedy   \n...                                              ...  \n58093                            (no genres listed)   \n58094                                        Comedy   \n58095                                         Drama   \n58096                 Adventure|drama|HORROR|sci-fi   \n58097                            Action|crime|DRAMA   \n\n[58098 rows x 3 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>movieId</th>\n      <th>title</th>\n      <th>genres</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>Toy Story (1995)</td>\n      <td>Adventure|animation|CHILDREN|comedy|Fantasy</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>Jumanji (1995)</td>\n      <td>Adventure|children|FANTASY</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>Grumpier Old Men (1995)</td>\n      <td>Comedy|romance</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>Waiting to Exhale (1995)</td>\n      <td>Comedy|drama|ROMANCE</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>Father of the Bride Part II (1995)</td>\n      <td>Comedy</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>58093</th>\n      <td>193876</td>\n      <td>The Great Glinka (1946)</td>\n      <td>(no genres listed)</td>\n    </tr>\n    <tr>\n      <th>58094</th>\n      <td>193878</td>\n      <td>Les tribulations d'une caissière (2011)</td>\n      <td>Comedy</td>\n    </tr>\n    <tr>\n      <th>58095</th>\n      <td>193880</td>\n      <td>Her Name Was Mumu (2016)</td>\n      <td>Drama</td>\n    </tr>\n    <tr>\n      <th>58096</th>\n      <td>193882</td>\n      <td>Flora (2017)</td>\n      <td>Adventure|drama|HORROR|sci-fi</td>\n    </tr>\n    <tr>\n      <th>58097</th>\n      <td>193886</td>\n      <td>Leal (2018)</td>\n      <td>Action|crime|DRAMA</td>\n    </tr>\n  </tbody>\n</table>\n<p>58098 rows × 3 columns</p>\n</div>"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "movies_df"
    ],
@@ -52,8 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(58098, 3)"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "movies_df.shape"
    ],
@@ -66,8 +95,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 58098 entries, 0 to 58097\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column   Non-Null Count  Dtype \n",
+      "---  ------   --------------  ----- \n",
+      " 0   movieId  58098 non-null  int64 \n",
+      " 1   title    58098 non-null  object\n",
+      " 2   genres   58098 non-null  object\n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 1.3+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "movies_df.info()"
    ],
@@ -93,10 +139,9 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from analysis_complete.analysis.utils.cleaning import lower_case_and_strip_spaces\n",
     "\n",
     "movies_cleaned_df = movies_df.copy()\n",
-    "movies_cleaned_df['genres'] = movies_cleaned_df['genres'].apply(lower_case_and_strip_spaces)"
+    "movies_cleaned_df['genres'] = movies_cleaned_df['genres'].apply(lower_case_and_strip_spaces_notebook)"
    ],
    "metadata": {
     "collapsed": false,
@@ -107,11 +152,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "def lower_case_and_strip_spaces_notebook(input: str) -> str:\n",
-    "    return input.lower().strip()"
+    "    return None"
    ],
    "metadata": {
     "collapsed": false,
@@ -122,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "input_1 = \" comedy|FANTASY|Action \"\n",
@@ -143,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "def test_lower_case_and_strip_spaces(input: str, expected: str):\n",
@@ -159,8 +204,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 9,
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAssertionError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[9], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mtest_lower_case_and_strip_spaces\u001B[49m\u001B[43m(\u001B[49m\u001B[43minput_1\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mexpected_1\u001B[49m\u001B[43m)\u001B[49m\n",
+      "Cell \u001B[0;32mIn[8], line 3\u001B[0m, in \u001B[0;36mtest_lower_case_and_strip_spaces\u001B[0;34m(input, expected)\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mtest_lower_case_and_strip_spaces\u001B[39m(\u001B[38;5;28minput\u001B[39m: \u001B[38;5;28mstr\u001B[39m, expected: \u001B[38;5;28mstr\u001B[39m):\n\u001B[1;32m      2\u001B[0m     actual \u001B[38;5;241m=\u001B[39m lower_case_and_strip_spaces_notebook(\u001B[38;5;28minput\u001B[39m)\n\u001B[0;32m----> 3\u001B[0m     \u001B[38;5;28;01massert\u001B[39;00m actual \u001B[38;5;241m==\u001B[39m expected\n",
+      "\u001B[0;31mAssertionError\u001B[0m: "
+     ]
+    }
+   ],
    "source": [
     "test_lower_case_and_strip_spaces(input_1, expected_1)"
    ],
@@ -173,8 +231,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 10,
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAssertionError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[10], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mtest_lower_case_and_strip_spaces\u001B[49m\u001B[43m(\u001B[49m\u001B[43minput_2\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mexpected_2\u001B[49m\u001B[43m)\u001B[49m\n",
+      "Cell \u001B[0;32mIn[8], line 3\u001B[0m, in \u001B[0;36mtest_lower_case_and_strip_spaces\u001B[0;34m(input, expected)\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mtest_lower_case_and_strip_spaces\u001B[39m(\u001B[38;5;28minput\u001B[39m: \u001B[38;5;28mstr\u001B[39m, expected: \u001B[38;5;28mstr\u001B[39m):\n\u001B[1;32m      2\u001B[0m     actual \u001B[38;5;241m=\u001B[39m lower_case_and_strip_spaces_notebook(\u001B[38;5;28minput\u001B[39m)\n\u001B[0;32m----> 3\u001B[0m     \u001B[38;5;28;01massert\u001B[39;00m actual \u001B[38;5;241m==\u001B[39m expected\n",
+      "\u001B[0;31mAssertionError\u001B[0m: "
+     ]
+    }
+   ],
    "source": [
     "test_lower_case_and_strip_spaces(input_2, expected_2)"
    ],
